update UserShift functionality and address inconsistencies in shift handling